--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6189,10 +6189,34 @@ img {
 .screen-plans-cards .row {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  row-gap: 40px;
+  margin-bottom: 40px;
+}
+@media (max-width: 1680px) {
+  .screen-plans-cards .row {
+    row-gap: 30px;
+    margin-bottom: 30px;
+  }
 }
 @media (max-width: 1366px) {
   .screen-plans-cards .row {
+    row-gap: 25px;
     margin-bottom: 16px;
+  }
+}
+@media (max-width: 1680px), (max-height: 900px) {
+  .screen-plans-cards .row {
+    row-gap: 25px;
+  }
+}
+@media (max-width: 768px) {
+  .screen-plans-cards .row {
+    row-gap: 22px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-cards .row {
+    row-gap: 20px;
   }
 }
 .screen-plans-cards .screen-plans-item {
@@ -6203,7 +6227,7 @@ img {
   padding-left: 25px;
   padding-top: 36px;
   padding-bottom: 26px;
-  margin-bottom: 40px;
+  height: 100%;
 }
 @media (max-width: 1680px) {
   .screen-plans-cards .screen-plans-item {
@@ -6211,7 +6235,6 @@ img {
     padding-left: 20px;
     padding-top: 30px;
     padding-bottom: 20px;
-    margin-bottom: 30px;
   }
 }
 @media (max-width: 1366px) {
@@ -6220,7 +6243,6 @@ img {
     padding-left: 15px;
     padding-top: 25px;
     padding-bottom: 15px;
-    margin-bottom: 25px;
   }
 }
 @media (max-width: 1680px), (max-height: 900px) {
@@ -6229,7 +6251,6 @@ img {
     padding-left: 15px;
     padding-top: 25px;
     padding-bottom: 15px;
-    margin-bottom: 25px;
   }
 }
 @media (max-width: 768px) {
@@ -6238,7 +6259,6 @@ img {
     padding-left: 15px;
     padding-top: 25px;
     padding-bottom: 24px;
-    margin-bottom: 22px;
   }
 }
 @media (max-width: 480px) {
@@ -7180,7 +7200,8 @@ img {
 }
 
 .mfp-container {
-  overflow: scroll;
+  height: 100vh;
+  overflow: auto;
 }
 @media (max-width: 1680px) {
   .mfp-container {
