--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1547,6 +1547,22 @@
   right: 0;
   bottom: 0;
   height: 155px;
+  &::before {
+    @media (max-width: 768px) {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 120px;
+      background-color: rgba(0, 0, 0, 0.1);
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.272) 47.92%, rgba(0, 0, 0, 0.00) 100%);
+      z-index: 9;
+    }   
+    @media (max-width: 599px) {
+      height: 120px;
+    }
+  }
   .header-logo {
     a {
       display: inline-block;
@@ -1626,10 +1642,21 @@
       background-color: transparent;
       cursor: pointer;
       display: none;
+
       @media (max-width: 768px) {
         position: relative;
         display: flex;
         z-index: 10;
+        position: fixed;
+        right: 35px;
+      }
+
+      @media (max-width: 599px) {
+        right: 30px;
+      }
+
+      @media (max-width: 420px) {
+        right: 20px;
       }
     
       span {
@@ -1683,7 +1710,7 @@
         gap: 35px;
       }
       @media (max-width: 768px) {
-        position: absolute;
+        position: fixed;
         padding-top: 200px;
         background-color: #23372B;
         flex-direction: column;
@@ -1693,7 +1720,7 @@
         right: 0;
         bottom: 0;
         align-items: center;       
-        z-index: 5;
+        z-index: 9;
         height: 100vh;   
         transform: translateY(-100%);  
         transition: 0.3s;         
@@ -2082,6 +2109,7 @@
     border-radius: 10px;
     border: 1px solid #607367;  
     margin-left: 20px;   
+    z-index: 2;
     @media (max-width: 1366px) {
       @include fz(14);
       height: 47px;
